# Crocker-Digitlization-GUI

./: README.md
CrockerGUI/: CMakeLists.txt
CrockerGUI/build-chart-check/: ALL_BUILD.vcxproj  CMakeCache.txt  CrockerGUI.slnx  CrockerOpenGLTest.vcxproj  CrockerOpenGLTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  crocker_engine.vcxproj  crocker_engine.vcxproj.filters
CrockerGUI/build-chart-check/CrockerOpenGLTest.dir/Debug/: CrockerOpenGLTest.exe.recipe
CrockerGUI/build-chart-check/CrockerOpenGLTest.dir/Debug/CrockerO.BB6252CE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CrockerOpenGLTest.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CrockerGUI/build-chart-check/Debug/: crocker_engine.lib
CrockerGUI/build-chart-check/crocker_engine.dir/Debug/crocker_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CrockerGUI/build-chart-check/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
CrockerGUI/build-old/: CMakeCache.txt  CrockerOpenGLTest  cmake_install.cmake
CrockerGUI/build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CrockerGUI.slnx  CrockerOpenGLTest.vcxproj  CrockerOpenGLTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  crocker_engine.vcxproj  crocker_engine.vcxproj.filters
CrockerGUI/build-windows/CrockerOpenGLTest.dir/Debug/: CrockerOpenGLTest.exe.recipe  CrockerOpenGLTest.ilk
CrockerGUI/build-windows/CrockerOpenGLTest.dir/Debug/CrockerO.2DF6F937.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CrockerOpenGLTest.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CrockerGUI/build-windows/Debug/: crocker_engine.lib
CrockerGUI/build-windows/Debug/shaders/: Test.frag
CrockerGUI/build-windows/crocker_engine.dir/Debug/: crocker_engine.lib.recipe
CrockerGUI/build-windows/crocker_engine.dir/Debug/crocker_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CrockerGUI/build-windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
CrockerGUI/include/Engine/Engine/: Engine.hpp
CrockerGUI/include/Engine/Engine/Render/: Camera.hpp  Renderer.hpp
CrockerGUI/include/Engine/Engine/Render/Buffers/: VAO.hpp  VBO.hpp
CrockerGUI/include/Engine/Engine/Render/Shader/: Shader.hpp
CrockerGUI/include/Engine/Viz/Charts/: Chart.hpp  ChartRect.hpp  ChartStyle.hpp
CrockerGUI/include/Engine/Viz/Charts/ChartTypes/: BarChart.hpp  LineChart.hpp
CrockerGUI/include/Engine/Viz/Data/: DataTable.hpp
CrockerGUI/python/app/Controls/: README.md
CrockerGUI/python/app/History/: README.md
CrockerGUI/python/app/Monitoring/: README.md
CrockerGUI/source/: Bindings.cpp  Kernel.cu
CrockerGUI/source/Controls/: README.md
CrockerGUI/source/Engine/: Engine.cpp
CrockerGUI/source/Engine/Render/: Camera.cpp  Renderer.cpp
CrockerGUI/source/Engine/Render/Buffers/: VAO.cpp  VBO.cpp
CrockerGUI/source/Engine/Render/Shader/: Shader.cpp
CrockerGUI/source/Engine/Viz/BarChart/: README.MD
CrockerGUI/source/Engine/Viz/Charts/: ChartOpenGL.hpp
CrockerGUI/source/Engine/Viz/Charts/BarChart/: BarChart.cpp
CrockerGUI/source/Engine/Viz/Charts/LineChart/: LineChart.cpp
CrockerGUI/source/Engine/Viz/LineChart/: README.MD
CrockerGUI/source/Engine/Viz/StarPlot/: README.md
CrockerGUI/tests/: OpenGLTest.cpp
